Fixing the services